[package]
name = "yxhoo-transit"
version = "0.4.1"
edition = "2024"
description = "A client for Yxhoo! Transit (Japan) unofficial API"
license = "Apache-2.0"
repository = "https://github.com/waki285/yxhoo-transit-rs"
readme = "README.md"
keywords = ["transit", "japan", "api"]
categories = ["api-bindings", "web-programming::http-client"]

rust-version = "1.85" 

[features]
default = ["http-reqwest"]
http-wreq = ["dep:wreq", "dep:wreq-util"]
http-reqwest = ["dep:reqwest"]
schemars = ["dep:schemars"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "std",
    "oldtime",
    "serde",
] }
schemars = { version = "1", optional = true }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.26", default-features = false, features = [
    "charset",
    "json",
    "rustls-tls",
    "system-proxy",
], optional = true }
wreq = { version = "5.3.0", features = ["json"], optional = true }
wreq-util = { version = "2.2.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
