[package]
name = "yxhoo-transit"
version = "0.4.3"
edition = "2024"
description = "A client for Yxhoo! Transit (Japan) unofficial API"
license = "Apache-2.0"
repository = "https://github.com/waki285/yxhoo-transit-rs"
readme = "README.md"
keywords = ["transit", "japan", "api"]
categories = ["api-bindings", "web-programming::http-client"]

rust-version = "1.85" 

[features]
default = ["http-reqwest"]
http-wreq = ["dep:wreq", "dep:wreq-util"]
http-reqwest = ["dep:reqwest"]
schemars = ["dep:schemars"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "oldtime",
    "serde",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "json",
    "rustls-tls",
    "system-proxy",
], optional = true }
schemars = { version = "1", optional = true }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wreq = { version = "5.3", features = ["json"], optional = true }
wreq-util = { version = "2.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "suggest"
doc-scrape-examples = true

[[example]]
name = "transit"
doc-scrape-examples = true
